--- Fixed issue where Firebase init was getting called more than once         -- On first visit to patient registration, an initializer is created and persists.         When visiting the page again, it would crash since the controller was trying to         initialize another FB instance.         -- Relocated instance into JS configs where it would be called once
    --- Prepped patient registration for production
        -- Re-hid the empty registration fields

    --- Fixed issue where timepicker was not showing
        -- Due to angular bootstrap upgrade

--- a/templates/add-post.html
+++ b/templates/add-post.html
@@ -479,7 +479,7 @@
                   </div>
                   <div class="col-md-6" style="margin-top: -24px;">
                     <div>
-                      <uib-timepicker ng-model="newPost.publish_time" ng-change="publishDateUpdate()" minute-step="5" show-meridian="false"></uib-timepicker>
+                      <div uib-timepicker ng-model="newPost.publish_time" ng-change="publishDateUpdate()" minute-step="5" show-meridian="false"></div>
                     </div>
                   </div>
                 </div>
