--- a/templates/post.html
+++ b/templates/post.html
@@ -181,7 +181,7 @@
               </div>
               <div class="col-md-6" style="margin-top: -24px;">
                 <div>
-                  <uib-timepicker ng-change="setChangesMade()" ng-model="post.publish_time" minute-step="5" show-meridian="false"></uib-timepicker>
+                  <div uib-timepicker ng-change="setChangesMade()" ng-model="post.publish_time" minute-step="5" show-meridian="false"></div>
                 </div>
               </div>
             </div>
