--- a/templates/patient.html
+++ b/templates/patient.html
@@ -62,3 +62,99 @@
           </span>     
         </h2>
       </div>
+			<div class="modal-body">
+        <uib-accordion>
+          <div uib-accordion-group is-open="true">
+            <uib-accordion-heading>
+              <div>
+                Change Password <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusA.open, 'glyphicon-chevron-right': !statusA.open}"></i>
+              </div>
+            </uib-accordion-heading>
+            <div class="row form-horizontal">
+							<div class="form-group has-feedback" ng-class="{'has-error': validOldPassword.status == 'invalid', 'has-warning': validOldPassword.status == 'warning'}">
+								<label class="control-label col-md-2">
+									Current Password
+								</label>
+								<div class="col-md-7">
+									<input type="password" class="form-control" required="required" ng-change="validateOldPassword(patient.oldPassword)" ng-model="patient.oldPassword">
+									<span ng-show="validOldPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-remove': validOldPassword.status == 'invalid', 'glyphicon-warning-sign': validOldPassword.status == 'warning'}" aria-hidden="true"></span>
+								</div>
+								<em class="control-label col-md-3" ng-show="validOldPassword.status == 'invalid' || validOldPassword.status == 'warning'" ng-class="{'has-error': validOldPassword.status == 'invalid', 'has-warning': validOldPassword.status == 'warning'}" style="text-align:left;">
+									{{validOldPassword.message}}
+								</em>
+							</div>
+              <div class="form-group has-feedback" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}">
+                <label class="control-label col-md-2">
+                  Password <br><em><small>(min: 6 characters)</small></em>
+                </label>
+                <div class="col-md-7">
+                  <input type="password" class="form-control" ng-change="validatePassword(patient.password)" ng-model="patient.password">
+                  <span ng-show="validPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validPassword.status == 'valid', 'glyphicon-remove': validPassword.status == 'invalid', 'glyphicon-warning-sign': validPassword.status == 'warning'}" aria-hidden="true"></span>
+                </div>
+                <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
+                  {{validPassword.message}}
+                </em>
+              </div>
+              <div class="form-group has-feedback" ng-class="{'has-success': validConfirmPassword.status == 'valid', 'has-error': validConfirmPassword.status == 'invalid', 'has-warning': validConfirmPassword.status == 'warning'}">
+                <label class="control-label col-md-2">
+                  Re-type Password
+                </label>
+                <div class="col-md-7">
+                  <input type="password" class="form-control" required="required" ng-change="validateConfirmPassword(patient.confirmPassword)" ng-model="patient.confirmPassword" ng-disabled="patient.password.length < 6 || !patient.password">
+                  <span ng-show="validConfirmPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validConfirmPassword.status == 'valid', 'glyphicon-remove': validConfirmPassword.status == 'invalid', 'glyphicon-warning-sign': validConfirmPassword.status == 'warning'}" aria-hidden="true"></span>
+                </div>
+                <em class="control-label col-md-3" ng-show="validConfirmPassword.status == 'invalid' || validConfirmPassword.status == 'warning'" ng-class="{'has-success': validConfirmPassword.status == 'valid', 'has-error': validConfirmPassword.status == 'invalid', 'has-warning': validConfirmPassword.status == 'warning'}" style="text-align:left">
+                  {{validConfirmPassword.message}}
+                </em>
+              </div>    
+            </div>
+          </div>
+				</uib-accordion>
+      </div>
+    </script>
+		<script type="text/ng-template" id="toggleBlockModalContent.htm">
+      <div class="modal-header">
+        <h2 class="modal-title">
+          <span class="fa fa-address-card" style="font-size: 30px;"></span> 
+          <span ng-if="currentPatient.disabled">Block</span>
+					<span ng-if="!currentPatient.disabled">Unblock</span>  
+					Patient: {{currentPatient.name}} 
+        </h2>
+      </div>
+      <div class="modal-body">
+				<div class="row form-horizontal">
+					<div class="form-group has-feedback">
+						<label class="control-label col-md-2">
+							Reason
+						</label>
+						<div class="col-md-7">
+							<textarea class="form-control" rows="10" ng-model="currentPatient.reason" placeholder="Reason" required="required"></textarea>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-7">
+						<div class="table-buttons" style="text-align: right">
+							<form ng-submit="submitToggle()" method="post">
+								<button class="btn btn-primary" ng-class="{'disabled': !currentPatient.reason}" type="submit">
+									<span ng-if="currentPatient.disabled">Block</span>
+									<span ng-if="!currentPatient.disabled">Unblock</span>
+								</button>
+								<input ng-click="cancel()" class="btn btn-danger" type="button" value="Cancel">
+							</form>
+						</div>
+					</div>
+				</div>	
+      </div>
+    </script>
+		<script type="text/ng-template" id="processingModal.htm">
+      <div class="modal-header">
+        <h1> Processing...</h1>
+      </div>
+      <div class="modal-body">
+        <div class="progress progress-striped active">
+          <div class="progress-bar" style="width: 100%"></div>        
+        </div>
+      </div>
+    </script>
