--- a/templates/patient.html
+++ b/templates/patient.html
@@ -76,7 +76,7 @@
 									Current Password
 								</label>
 								<div class="col-md-7">
-									<input type="password" class="form-control" required="required" ng-change="validateOldPassword(patient.oldPassword)" ng-model="patient.oldPassword">
+									<input type="password" class="form-control" required="required" ng-change="validateOldPassword(patient.oldPassword)" ng-model="patient.oldPassword" ng-disabled="patientIsDisabled">
 									<span ng-show="validOldPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-remove': validOldPassword.status == 'invalid', 'glyphicon-warning-sign': validOldPassword.status == 'warning'}" aria-hidden="true"></span>
 								</div>
 								<em class="control-label col-md-3" ng-show="validOldPassword.status == 'invalid' || validOldPassword.status == 'warning'" ng-class="{'has-error': validOldPassword.status == 'invalid', 'has-warning': validOldPassword.status == 'warning'}" style="text-align:left;">
@@ -88,7 +88,7 @@
                   Password <br><em><small>(min: 6 characters)</small></em>
                 </label>
                 <div class="col-md-7">
-                  <input type="password" class="form-control" ng-change="validatePassword(patient.password)" ng-model="patient.password">
+                  <input type="password" class="form-control" ng-change="validatePassword(patient.password)" ng-model="patient.password" ng-disabled="patientIsDisabled">
                   <span ng-show="validPassword.status" class="glyphicon form-control-feedback" ng-class="{'glyphicon-ok': validPassword.status == 'valid', 'glyphicon-remove': validPassword.status == 'invalid', 'glyphicon-warning-sign': validPassword.status == 'warning'}" aria-hidden="true"></span>
                 </div>
                 <em class="control-label col-md-3" ng-show="validPassword.status == 'invalid' || validPassword.status == 'warning'" ng-class="{'has-success': validPassword.status == 'valid', 'has-error': validPassword.status == 'invalid', 'has-warning': validPassword.status == 'warning'}" style="text-align:left">
