--- Improved design --- Added email template and controller

--- a/templates/add-alias.html
+++ b/templates/add-alias.html
@@ -223,7 +223,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Source Database</h2>
                   </span>  
                 </div>  
@@ -255,7 +255,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Title & Description</h2>
                   </span>  
                 </div>  
@@ -327,7 +327,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Educational Material</h2>
                   </span>  
                 </div>  
@@ -370,7 +370,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Type</h2>
                   </span>  
                 </div>  
@@ -400,7 +400,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Icon Color</h2>
                   </span>  
                 </div>  
@@ -431,7 +431,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Aliased Expressions</h2>
                   </span>  
                 </div>  
