--- a/templates/hospital-map.html
+++ b/templates/hospital-map.html
@@ -8,7 +8,7 @@
           <div class="col-md-10 animated fadeIn">
             <div class="row main-title">
               <div class="col-md-9 title-content">
-                <span class="glyphicon glyphicon-map-marker"></span>
+                <span class="fa fa-map"></span>
                 <h1><strong>Hospital Maps</strong></h1>
               </div>
               <div class="col-md-3 title-breadcrumbs"> 
