--- a/templates/add-hospital-map.html
+++ b/templates/add-hospital-map.html
@@ -125,7 +125,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Title & Description</h2>
                   </span>  
                 </div>  
@@ -206,7 +206,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>QR Identifier & Map URL</h2>
                   </span>  
                 </div>  
