--- a/templates/add-test-result.html
+++ b/templates/add-test-result.html
@@ -153,7 +153,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Tests</h2>
                   </span>  
                 </div>  
@@ -197,7 +197,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Title, Test Group & Description</h2>
                   </span>  
                 </div>  
