--- a/templates/add-user.html
+++ b/templates/add-user.html
@@ -123,7 +123,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>Username & Password</h2>
                     </span>  
                   </div>  
@@ -190,7 +190,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>Role</h2>
                     </span>  
                   </div>  
