--- a/templates/home.html
+++ b/templates/home.html
@@ -16,14 +16,14 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
-									<span class="glyphicon glyphicon-menu-down"></span>
+									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Publishing Tools</span>
 								</div>
 							</div>
 						</div>
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverA}" ng-mouseenter="hoverA=true" ng-mouseleave="hoverA=false" style="cursor:pointer;" ng-click="goToAlias()">
+								<div class="panel-container animated" ng-class="{pulse: hoverAliasMenu}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -40,7 +40,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverB}" ng-mouseenter="hoverB=true" ng-mouseleave="hoverB=false" style="cursor:pointer;" ng-click="goToPost()">
+								<div class="panel-container animated" ng-class="{pulse: hoverPostMenu}" ng-mouseenter="hoverPostMenu=true" ng-mouseleave="hoverPostMenu=false" style="cursor:pointer;" ng-click="goToPost()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -57,7 +57,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverC}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
+								<div class="panel-container animated" ng-class="{pulse: hoverEduMatMenu}" ng-mouseenter="hoverEduMatMenu=true" ng-mouseleave="hoverEduMatMenu=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -74,11 +74,11 @@
 								</div>
 							</div> 
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverD}" ng-mouseenter="hoverD=true" ng-mouseleave="hoverD=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
+								<div class="panel-container animated" ng-class="{pulse: hoverHosMapMenu}" ng-mouseenter="hoverHosMapMenu=true" ng-mouseleave="hoverHosMapMenu=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+												<span style="font-size: 50px;" class="fa fa-map" aria-hidden="true"></span>
 											</div>
 											<div class="panel-title">  
 												<h1>Hospital Maps</h1>
@@ -91,7 +91,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverE}" ng-mouseenter="hoverE=true" ng-mouseleave="hoverE=false" style="cursor:pointer;" ng-click="goToNotification()">
+								<div class="panel-container animated" ng-class="{pulse: hoverNotificationMenu}" ng-mouseenter="hoverNotificationMenu=true" ng-mouseleave="hoverNotificationMenu=false" style="cursor:pointer;" ng-click="goToNotification()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -108,7 +108,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverG}" ng-mouseenter="hoverG=true" ng-mouseleave="hoverG=false" style="cursor:pointer;" ng-click="goToTestResult()">
+								<div class="panel-container animated" ng-class="{pulse: hoverTestResultMenu}" ng-mouseenter="hoverTestResultMenu=true" ng-mouseleave="hoverTestResultMenu=false" style="cursor:pointer;" ng-click="goToTestResult()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -125,17 +125,34 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverZ}" ng-mouseenter="hoverZ=true" ng-mouseleave="hoverZ=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
+								<div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
-												<span style="font-size: 50px;" class="glyphicon glyphicon-book" aria-hidden="true"></span>     
+												<span style="font-size: 50px;" class="fa fa-pencil-square-o" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
 												<h1>Questionnaire</h1>
 											</div>  
 											<div class="panel-description">
 												<p>Tool for referencing educational material hosted on the web.</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="panel-container animated" ng-class="{pulse: hoverEmailMenu}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
+									<div class="panel-info" style="height: 180px;">
+										<div class="panel-content">
+											<div class="icon-home clearfix">
+												<span style="font-size: 50px;" class="fa fa-envelope" aria-hidden="true"></span>     
+											</div>
+											<div class="panel-title">  
+												<h1>Email</h1>
+											</div>  
+											<div class="panel-description">
+												<p>Tool for creating email templates.</p>
 											</div>
 										</div>
 									</div>
@@ -147,14 +164,14 @@
         		<div class="row">
           		<div class="col-md-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
-									<span class="glyphicon glyphicon-menu-down"></span>
+									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Administration</span>
 								</div>
           		</div>
         		</div>
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-								<div class="panel-container animated" ng-class="{pulse: hoverH}" ng-mouseenter="hoverH=true" ng-mouseleave="hoverH=false" style="cursor:pointer;" ng-click="goToCron()">
+								<div class="panel-container animated" ng-class="{pulse: hoverCronMenu}" ng-mouseenter="hoverCronMenu=true" ng-mouseleave="hoverCronMenu=false" style="cursor:pointer;" ng-click="goToCron()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -171,7 +188,7 @@
 								</div>
 							</div>
 							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-								<div class="panel-container animated" ng-class="{pulse: hoverI}" ng-mouseenter="hoverI=true" ng-mouseleave="hoverI=false" style="cursor:pointer;" ng-click="goToPatient()">
+								<div class="panel-container animated" ng-class="{pulse: hoverPatientMenu}" ng-mouseenter="hoverPatientMenu=true" ng-mouseleave="hoverPatientMenu=false" style="cursor:pointer;" ng-click="goToPatient()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -188,7 +205,7 @@
 								</div>
 							</div>
 							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-								<div class="panel-container animated" ng-class="{pulse: hoverP}" ng-mouseenter="hoverP=true" ng-mouseleave="hoverP=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
+								<div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -205,7 +222,7 @@
 								</div>
 							</div>
 							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-								<div class="panel-container animated" ng-class="{pulse: hoverO}" ng-mouseenter="hoverO=true" ng-mouseleave="hoverO=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
+								<div class="panel-container animated" ng-class="{pulse: hoverPatActivityMenu}" ng-mouseenter="hoverPatActivityMenu=true" ng-mouseleave="hoverPatActivityMenu=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -222,7 +239,7 @@
 								</div>
 							</div>
 							<div class="col-md-6" ng-if="isAuthorized([userRoles.admin])">
-								<div class="panel-container animated" ng-class="{pulse: hoverL}" ng-mouseenter="hoverL=true" ng-mouseleave="hoverL=false" style="cursor:pointer;" ng-click="goToUsers()">
+								<div class="panel-container animated" ng-class="{pulse: hoverUserMenu}" ng-mouseenter="hoverUserMenu=true" ng-mouseleave="hoverUserMenu=false" style="cursor:pointer;" ng-click="goToUsers()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -244,14 +261,14 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="home-side-menu" style="margin-top:20px; margin-bottom:20px">
-									<span class="glyphicon glyphicon-menu-down"></span>
+									<span class="fa fa-dot-circle-o"></span>
 									<span class="title">Profile</span>
 								</div>
 							</div>
 						</div>
 						<div class="row animated fadeIn" style="padding: 0 20px 0 20px">
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverK}" ng-mouseenter="hoverK=true" ng-mouseleave="hoverK=false" style="cursor:pointer;" ng-click="goToAccount()">
+								<div class="panel-container animated" ng-class="{pulse: hoverAccountMenu}" ng-mouseenter="hoverAccountMenu=true" ng-mouseleave="hoverAccountMenu=false" style="cursor:pointer;" ng-click="goToAccount()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
@@ -268,7 +285,7 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<div class="panel-container animated" ng-class="{pulse: hoverM}" ng-mouseenter="hoverM=true" ng-mouseleave="hoverM=false" style="cursor:pointer;" ng-click="goToLogout()">
+								<div class="panel-container animated" ng-class="{pulse: hoverLogoutMenu}" ng-mouseenter="hoverLogoutMenu=true" ng-mouseleave="hoverLogoutMenu=false" style="cursor:pointer;" ng-click="goToLogout()">
 									<div class="panel-info" style="height: 180px;">
 										<div class="panel-content">
 											<div class="icon-home clearfix">
