--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -11,7 +11,7 @@
               <div class="side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Publishing Tools</h2>
                   </span>  
                 </div>  
@@ -19,7 +19,7 @@
             </div>   
             <div class="row side-panel-menu">            
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">   
-                <div class="panel-container animated" ng-class="{pulse: hoverC, active: currentPage == 'alias'}" ng-mouseenter="hoverC=true" ng-mouseleave="hoverC=false" style="cursor:pointer;" ng-click="goToAlias()">
+                <div class="panel-container animated" ng-class="{pulse: hoverAliasMenu, active: currentPage == 'alias'}" ng-mouseenter="hoverAliasMenu=true" ng-mouseleave="hoverAliasMenu=false" style="cursor:pointer;" ng-click="goToAlias()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'alias'}">
                     <div class="panel-content">
                       <span style="font-size: 23px;vertical-align:middle" class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
@@ -29,7 +29,7 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverD, active: currentPage == 'post'}" ng-mouseenter="hoverD=true" ng-mouseleave="hoverD=false" style="cursor:pointer;" ng-click="goToPost()">
+                <div class="panel-container animated" ng-class="{pulse: hoverPostMenu, active: currentPage == 'post'}" ng-mouseenter="hoverPostMenu=true" ng-mouseleave="hoverPostMenu=false" style="cursor:pointer;" ng-click="goToPost()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'post'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-comment" aria-hidden="true"></span>
@@ -39,7 +39,7 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverE, active: currentPage == 'educational-material'}" ng-mouseenter="hoverE=true" ng-mouseleave="hoverE=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
+                <div class="panel-container animated" ng-class="{pulse: hoverEduMatMenu, active: currentPage == 'educational-material'}" ng-mouseenter="hoverEduMatMenu=true" ng-mouseleave="hoverEduMatMenu=false" style="cursor:pointer;" ng-click="goToEducationalMaterial()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'educational-material'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-book" aria-hidden="true"></span>
@@ -49,17 +49,17 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverF, active: currentPage == 'hospital-map'}" ng-mouseenter="hoverF=true" ng-mouseleave="hoverF=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
+                <div class="panel-container animated" ng-class="{pulse: hoverHosMapMenu, active: currentPage == 'hospital-map'}" ng-mouseenter="hoverHosMapMenu=true" ng-mouseleave="hoverHosMapMenu=false" style="cursor:pointer;" ng-click="goToHospitalMap()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'hospital-map'}">
                     <div class="panel-content">
-                      <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-map" aria-hidden="true"></span>
                       <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Hospital Maps</strong></div>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverG, active: currentPage == 'notification'}" ng-mouseenter="hoverG=true" ng-mouseleave="hoverG=false" style="cursor:pointer;" ng-click="goToNotification()">
+                <div class="panel-container animated" ng-class="{pulse: hoverNotificationMenu, active: currentPage == 'notification'}" ng-mouseenter="hoverNotificationMenu=true" ng-mouseleave="hoverNotificationMenu=false" style="cursor:pointer;" ng-click="goToNotification()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'notification'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-bell" aria-hidden="true"></span>
@@ -69,11 +69,31 @@
                 </div>
               </div>      
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverN, active: currentPage == 'test-result'}" ng-mouseenter="hoverN=true" ng-mouseleave="hoverN=false" style="cursor:pointer;" ng-click="goToTestResult()">
+                <div class="panel-container animated" ng-class="{pulse: hoverTestResultMenu, active: currentPage == 'test-result'}" ng-mouseenter="hoverTestResultMenu=true" ng-mouseleave="hoverTestResultMenu=false" style="cursor:pointer;" ng-click="goToTestResult()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'test-result'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-heartbeat" aria-hidden="true"></span>
                       <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Test Results</strong></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                <div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu, active: currentPage == 'questionnaire'}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaire()">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
+                    <div class="panel-content">
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square-o" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Questionnaire</strong></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+                <div class="panel-container animated" ng-class="{pulse: hoverEmailMenu, active: currentPage == 'email'}" ng-mouseenter="hoverEmailMenu=true" ng-mouseleave="hoverEmailMenu=false" style="cursor:pointer;" ng-click="goToEmail()">
+                  <div class="side-panel-info-sm" ng-class="{active: currentPage == 'email'}">
+                    <div class="panel-content">
+                      <span style="font-size: 21px; vertical-align:middle" class="fa fa-envelope" aria-hidden="true"></span>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Email</strong></div>
                     </div>
                   </div>
                 </div>
@@ -83,7 +103,7 @@
               <div class="side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Adminstration</h2>
                   </span>  
                 </div>  
@@ -91,7 +111,7 @@
             </div>   
             <div class="row side-panel-menu">
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverH, active: currentPage == 'cron'}" ng-mouseenter="hoverH=true" ng-mouseleave="hoverH=false" style="cursor:pointer;" ng-click="goToCron()">
+                <div class="panel-container animated" ng-class="{pulse: hoverCronMenu, active: currentPage == 'cron'}" ng-mouseenter="hoverCronMenu=true" ng-mouseleave="hoverCronMenu=false" style="cursor:pointer;" ng-click="goToCron()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'cron'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-time" aria-hidden="true"></span>
@@ -101,7 +121,7 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverI, active: currentPage == 'patients'}" ng-mouseenter="hoverI=true" ng-mouseleave="hoverI=false" style="cursor:pointer;" ng-click="goToPatient()">
+                <div class="panel-container animated" ng-class="{pulse: hoverPatientMenu, active: currentPage == 'patients'}" ng-mouseenter="hoverPatientMenu=true" ng-mouseleave="hoverPatientMenu=false" style="cursor:pointer;" ng-click="goToPatient()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-address-card" aria-hidden="true"></span>
@@ -111,7 +131,7 @@
                 </div>
               </div>
 			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-                <div class="panel-container animated" ng-class="{pulse: hoverP, active: currentPage == 'patients-register'}" ng-mouseenter="hoverP=true" ng-mouseleave="hoverP=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
+                <div class="panel-container animated" ng-class="{pulse: hoverPatRegMenu, active: currentPage == 'patients-register'}" ng-mouseenter="hoverPatRegMenu=true" ng-mouseleave="hoverPatRegMenu=false" style="cursor:pointer;" ng-click="goToPatientRegistration()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patients-register'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-user-plus" aria-hidden="true"></span>
@@ -121,7 +141,7 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverO, active: currentPage == 'patient-activity'}" ng-mouseenter="hoverO=true" ng-mouseleave="hoverO=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
+                <div class="panel-container animated" ng-class="{pulse: hoverPatActivityMenu, active: currentPage == 'patient-activity'}" ng-mouseenter="hoverPatActivityMenu=true" ng-mouseleave="hoverPatActivityMenu=false" style="cursor:pointer;" ng-click="goToPatientActivity()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'patient-activity'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-hourglass-half" aria-hidden="true"></span>
@@ -131,7 +151,7 @@
                 </div>
               </div>
 			  <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
-                <div class="panel-container animated" ng-class="{pulse: hoverL, active: currentPage == 'users'}" ng-mouseenter="hoverL=true" ng-mouseleave="hoverL=false" style="cursor:pointer;" ng-click="goToUsers()">
+                <div class="panel-container animated" ng-class="{pulse: hoverUserMenu, active: currentPage == 'users'}" ng-mouseenter="hoverUserMenu=true" ng-mouseleave="hoverUserMenu=false" style="cursor:pointer;" ng-click="goToUsers()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'users'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-users" aria-hidden="true"></span>
@@ -145,7 +165,7 @@
               <div class="side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>Profile</h2>
                   </span>  
                 </div>  
@@ -153,7 +173,7 @@
             </div>   
             <div class="row side-panel-menu">
               <div class="col-md-12" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
-                <div class="panel-container animated" ng-class="{pulse: hoverK, active: currentPage == 'account'}" ng-mouseenter="hoverK=true" ng-mouseleave="hoverK=false" style="cursor:pointer;" ng-click="goToAccount()">
+                <div class="panel-container animated" ng-class="{pulse: hoverAccountMenu, active: currentPage == 'account'}" ng-mouseenter="hoverAccountMenu=true" ng-mouseleave="hoverAccountMenu=false" style="cursor:pointer;" ng-click="goToAccount()">
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'account'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-cog" aria-hidden="true"></span>
@@ -163,7 +183,7 @@
                 </div>
               </div>
               <div class="col-md-12" ng-if="isAuthorized([userRoles.all])">
-                <div class="panel-container animated" ng-class="{pulse: hoverM}" ng-mouseenter="hoverM=true" ng-mouseleave="hoverM=false" style="cursor:pointer;" ng-click="goToLogout()">
+                <div class="panel-container animated" ng-class="{pulse: hoverLogoutMenu}" ng-mouseenter="hoverLogoutMenu=true" ng-mouseleave="hoverLogoutMenu=false" style="cursor:pointer;" ng-click="goToLogout()">
                   <div class="side-panel-info-sm">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
