--- Added insert, remove, update email

--- a/templates/home.html
+++ b/templates/home.html
@@ -132,7 +132,7 @@
 												<span style="font-size: 50px;" class="fa fa-pencil-square-o" aria-hidden="true"></span>     
 											</div>
 											<div class="panel-title">  
-												<h1>Questionnaire</h1>
+												<h1>Questionnaires</h1>
 											</div>  
 											<div class="panel-description">
 												<p>Tool for referencing educational material hosted on the web.</p>
