--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -83,7 +83,7 @@
                   <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire'}">
                     <div class="panel-content">
                       <span style="font-size: 21px; vertical-align:middle" class="fa fa-pencil-square-o" aria-hidden="true"></span>
-                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Questionnaire</strong></div>
+                      <div class="side-panel-title" style="display:inline-block;margin:0"><strong>Questionnaires</strong></div>
                     </div>
                   </div>
                 </div>
