--- Fixed missing files

--- a/templates/add-email.html
+++ b/templates/add-email.html
@@ -161,7 +161,7 @@
                 <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newEmail.type == type.serial}" ng-click="typeUpdate(type.serial)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
                   <div class="panel-info" ng-class="{active: newEmail.type == type.serial}">
                     <div class="panel-content" style="text-align:center">
-                      <span style="font-size:30px;" class="glyphicon glyphicon-bell"></span>
+                      <span style="font-size:30px;" class="fa fa-envelope"></span>
                       <div class="option-panel-title">{{type.name}}</div>
                     </div>
                   </div>
